<resources>
    <string name="app_name">Primeiro Exemplo</string>
    <string name="label_nome">Nome</string>
    <string name="hint_nome">Informe seu nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="hint_telefone">Informe seu telefone</string>
    <string name="label_email">E-mail</string>
    <string name="hint_email">Informe seu e-mail</string>
    <string name="btn_exibir">Exibir</string>
</resources>
