<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nome" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_nome" />

        <TextView
            android:id="@+id/labelTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_telefone" />

        <EditText
            android:id="@+id/txtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/hint_telefone" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exibir"
            android:onClick="exibir"/>


        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/meme_crianca"
            android:layout_height="match_parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>